// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ChannelDesktopNotificationSection should match snapshot on server error 1`] = `
<SettingItemMin
  describe={
    <FormattedMessage
      id="channel_notifications.allActivity"
      values={Object {}}
    />
  }
  section=""
  title={
    <FormattedMessage
      defaultMessage="Send desktop notifications"
      id="channel_notifications.sendDesktop"
      values={Object {}}
    />
  }
  updateSection={[Function]}
/>
`;

exports[`components/ChannelDesktopNotificationSection should match snapshot when getDescribe is called 1`] = `
<FormattedMessage
  id="channel_notifications.allActivity"
  values={Object {}}
/>
`;

exports[`components/ChannelDesktopNotificationSection should match snapshot when getDescribe is called 2`] = `
<FormattedMessage
  id="channel_notifications.allActivity"
  values={Object {}}
/>
`;

exports[`components/ChannelDesktopNotificationSection should match snapshot when getDescribe is called 3`] = `
<FormattedMessage
  id="channel_notifications.allActivity"
  values={Object {}}
/>
`;

exports[`components/ChannelDesktopNotificationSection should match snapshot when getDescribe is called 4`] = `
<FormattedMessage
  id="channel_notifications.allActivity"
  values={Object {}}
/>
`;

exports[`components/ChannelDesktopNotificationSection should match snapshot when getGlobalNotifyLevelName is called 1`] = `
<FormattedMessage
  defaultMessage="For all activity"
  id="channel_notifications.allActivity"
  values={Object {}}
/>
`;

exports[`components/ChannelDesktopNotificationSection should match snapshot when getGlobalNotifyLevelName is called 2`] = `
<FormattedMessage
  defaultMessage="Only for mentions"
  id="channel_notifications.onlyMentions"
  values={Object {}}
/>
`;

exports[`components/ChannelDesktopNotificationSection should match snapshot when getGlobalNotifyLevelName is called 3`] = `
<FormattedMessage
  defaultMessage="Never"
  id="channel_notifications.never"
  values={Object {}}
/>
`;

exports[`components/ChannelDesktopNotificationSection should match snapshot, expanded view, global notification to all 1`] = `
<SettingItemMax
  extraInfo={
    <span>
      <FormattedMessage
        defaultMessage="Selecting an option other than \\"Default\\" will override the global notification settings. Desktop notifications are available on Firefox, Safari, and Chrome."
        id="channel_notifications.override"
        values={Object {}}
      />
    </span>
  }
  infoPosition="bottom"
  inputs={
    Array [
      <div>
        <div
          className="radio"
        >
          <label>
            <input
              checked={false}
              id="channelNotificationGlobalDefault"
              name="desktopNotificationLevel"
              onChange={[Function]}
              type="radio"
              value="default"
            />
            <FormattedMessage
              defaultMessage="Global default ({notifyLevel})"
              id="channel_notifications.globalDefault"
              values={
                Object {
                  "notifyLevel": <FormattedMessage
                    defaultMessage="For all activity"
                    id="channel_notifications.allActivity"
                    values={Object {}}
                  />,
                }
              }
            />
          </label>
          <br />
        </div>
        <div
          className="radio"
        >
          <label>
            <input
              checked={true}
              id="channelNotificationAllActivity"
              name="desktopNotificationLevel"
              onChange={[Function]}
              type="radio"
              value="all"
            />
            <FormattedMessage
              id="channel_notifications.allActivity"
              values={Object {}}
            />
          </label>
          <br />
        </div>
        <div
          className="radio"
        >
          <label>
            <input
              checked={false}
              id="channelNotificationMentions"
              name="desktopNotificationLevel"
              onChange={[Function]}
              type="radio"
              value="mention"
            />
            <FormattedMessage
              id="channel_notifications.onlyMentions"
              values={Object {}}
            />
          </label>
          <br />
        </div>
        <div
          className="radio"
        >
          <label>
            <input
              checked={false}
              id="channelNotificationNever"
              name="desktopNotificationLevel"
              onChange={[Function]}
              type="radio"
              value="none"
            />
            <FormattedMessage
              id="channel_notifications.never"
              values={Object {}}
            />
          </label>
        </div>
      </div>,
    ]
  }
  saving={false}
  section=""
  server_error=""
  submit={[Function]}
  title={
    <FormattedMessage
      defaultMessage="Send desktop notifications"
      id="channel_notifications.sendDesktop"
      values={Object {}}
    />
  }
  updateSection={[Function]}
/>
`;

exports[`components/ChannelDesktopNotificationSection should match snapshot, expanded view, member notification to all 1`] = `
<SettingItemMax
  extraInfo={
    <span>
      <FormattedMessage
        defaultMessage="Selecting an option other than \\"Default\\" will override the global notification settings. Desktop notifications are available on Firefox, Safari, and Chrome."
        id="channel_notifications.override"
        values={Object {}}
      />
    </span>
  }
  infoPosition="bottom"
  inputs={
    Array [
      <div>
        <div
          className="radio"
        >
          <label>
            <input
              checked={false}
              id="channelNotificationGlobalDefault"
              name="desktopNotificationLevel"
              onChange={[Function]}
              type="radio"
              value="default"
            />
            <FormattedMessage
              defaultMessage="Global default ({notifyLevel})"
              id="channel_notifications.globalDefault"
              values={
                Object {
                  "notifyLevel": <FormattedMessage
                    defaultMessage="Never"
                    id="channel_notifications.never"
                    values={Object {}}
                  />,
                }
              }
            />
          </label>
          <br />
        </div>
        <div
          className="radio"
        >
          <label>
            <input
              checked={true}
              id="channelNotificationAllActivity"
              name="desktopNotificationLevel"
              onChange={[Function]}
              type="radio"
              value="all"
            />
            <FormattedMessage
              id="channel_notifications.allActivity"
              values={Object {}}
            />
          </label>
          <br />
        </div>
        <div
          className="radio"
        >
          <label>
            <input
              checked={false}
              id="channelNotificationMentions"
              name="desktopNotificationLevel"
              onChange={[Function]}
              type="radio"
              value="mention"
            />
            <FormattedMessage
              id="channel_notifications.onlyMentions"
              values={Object {}}
            />
          </label>
          <br />
        </div>
        <div
          className="radio"
        >
          <label>
            <input
              checked={false}
              id="channelNotificationNever"
              name="desktopNotificationLevel"
              onChange={[Function]}
              type="radio"
              value="none"
            />
            <FormattedMessage
              id="channel_notifications.never"
              values={Object {}}
            />
          </label>
        </div>
      </div>,
    ]
  }
  saving={false}
  section=""
  server_error=""
  submit={[Function]}
  title={
    <FormattedMessage
      defaultMessage="Send desktop notifications"
      id="channel_notifications.sendDesktop"
      values={Object {}}
    />
  }
  updateSection={[Function]}
/>
`;

exports[`components/ChannelDesktopNotificationSection should match snapshot, expanded view, member notification to mention 1`] = `
<SettingItemMax
  extraInfo={
    <span>
      <FormattedMessage
        defaultMessage="Selecting an option other than \\"Default\\" will override the global notification settings. Desktop notifications are available on Firefox, Safari, and Chrome."
        id="channel_notifications.override"
        values={Object {}}
      />
    </span>
  }
  infoPosition="bottom"
  inputs={
    Array [
      <div>
        <div
          className="radio"
        >
          <label>
            <input
              checked={false}
              id="channelNotificationGlobalDefault"
              name="desktopNotificationLevel"
              onChange={[Function]}
              type="radio"
              value="default"
            />
            <FormattedMessage
              defaultMessage="Global default ({notifyLevel})"
              id="channel_notifications.globalDefault"
              values={
                Object {
                  "notifyLevel": <FormattedMessage
                    defaultMessage="Never"
                    id="channel_notifications.never"
                    values={Object {}}
                  />,
                }
              }
            />
          </label>
          <br />
        </div>
        <div
          className="radio"
        >
          <label>
            <input
              checked={false}
              id="channelNotificationAllActivity"
              name="desktopNotificationLevel"
              onChange={[Function]}
              type="radio"
              value="all"
            />
            <FormattedMessage
              id="channel_notifications.allActivity"
              values={Object {}}
            />
          </label>
          <br />
        </div>
        <div
          className="radio"
        >
          <label>
            <input
              checked={true}
              id="channelNotificationMentions"
              name="desktopNotificationLevel"
              onChange={[Function]}
              type="radio"
              value="mention"
            />
            <FormattedMessage
              id="channel_notifications.onlyMentions"
              values={Object {}}
            />
          </label>
          <br />
        </div>
        <div
          className="radio"
        >
          <label>
            <input
              checked={false}
              id="channelNotificationNever"
              name="desktopNotificationLevel"
              onChange={[Function]}
              type="radio"
              value="none"
            />
            <FormattedMessage
              id="channel_notifications.never"
              values={Object {}}
            />
          </label>
        </div>
      </div>,
    ]
  }
  saving={false}
  section=""
  server_error=""
  submit={[Function]}
  title={
    <FormattedMessage
      defaultMessage="Send desktop notifications"
      id="channel_notifications.sendDesktop"
      values={Object {}}
    />
  }
  updateSection={[Function]}
/>
`;

exports[`components/ChannelDesktopNotificationSection should match snapshot, expanded view, member notification to none 1`] = `
<SettingItemMin
  describe={
    <FormattedMessage
      id="channel_notifications.never"
      values={Object {}}
    />
  }
  section=""
  title={
    <FormattedMessage
      defaultMessage="Send desktop notifications"
      id="channel_notifications.sendDesktop"
      values={Object {}}
    />
  }
  updateSection={[Function]}
/>
`;

exports[`components/ChannelDesktopNotificationSection should match snapshot, not expanded view, global notification to all 1`] = `
<SettingItemMin
  describe={
    <FormattedMessage
      id="channel_notifications.allActivity"
      values={Object {}}
    />
  }
  section=""
  title={
    <FormattedMessage
      defaultMessage="Send desktop notifications"
      id="channel_notifications.sendDesktop"
      values={Object {}}
    />
  }
  updateSection={[Function]}
/>
`;

exports[`components/ChannelDesktopNotificationSection should match snapshot, not expanded view, member notification to all 1`] = `
<SettingItemMin
  describe={
    <FormattedMessage
      id="channel_notifications.allActivity"
      values={Object {}}
    />
  }
  section=""
  title={
    <FormattedMessage
      defaultMessage="Send desktop notifications"
      id="channel_notifications.sendDesktop"
      values={Object {}}
    />
  }
  updateSection={[Function]}
/>
`;

exports[`components/ChannelDesktopNotificationSection should match snapshot, not expanded view, member notification to mention 1`] = `
<SettingItemMin
  describe={
    <FormattedMessage
      id="channel_notifications.onlyMentions"
      values={Object {}}
    />
  }
  section=""
  title={
    <FormattedMessage
      defaultMessage="Send desktop notifications"
      id="channel_notifications.sendDesktop"
      values={Object {}}
    />
  }
  updateSection={[Function]}
/>
`;

exports[`components/ChannelDesktopNotificationSection should match snapshot, not expanded view, member notification to none 1`] = `
<SettingItemMax
  extraInfo={
    <span>
      <FormattedMessage
        defaultMessage="Selecting an option other than \\"Default\\" will override the global notification settings. Desktop notifications are available on Firefox, Safari, and Chrome."
        id="channel_notifications.override"
        values={Object {}}
      />
    </span>
  }
  infoPosition="bottom"
  inputs={
    Array [
      <div>
        <div
          className="radio"
        >
          <label>
            <input
              checked={false}
              id="channelNotificationGlobalDefault"
              name="desktopNotificationLevel"
              onChange={[Function]}
              type="radio"
              value="default"
            />
            <FormattedMessage
              defaultMessage="Global default ({notifyLevel})"
              id="channel_notifications.globalDefault"
              values={
                Object {
                  "notifyLevel": <FormattedMessage
                    defaultMessage="Never"
                    id="channel_notifications.never"
                    values={Object {}}
                  />,
                }
              }
            />
          </label>
          <br />
        </div>
        <div
          className="radio"
        >
          <label>
            <input
              checked={false}
              id="channelNotificationAllActivity"
              name="desktopNotificationLevel"
              onChange={[Function]}
              type="radio"
              value="all"
            />
            <FormattedMessage
              id="channel_notifications.allActivity"
              values={Object {}}
            />
          </label>
          <br />
        </div>
        <div
          className="radio"
        >
          <label>
            <input
              checked={false}
              id="channelNotificationMentions"
              name="desktopNotificationLevel"
              onChange={[Function]}
              type="radio"
              value="mention"
            />
            <FormattedMessage
              id="channel_notifications.onlyMentions"
              values={Object {}}
            />
          </label>
          <br />
        </div>
        <div
          className="radio"
        >
          <label>
            <input
              checked={true}
              id="channelNotificationNever"
              name="desktopNotificationLevel"
              onChange={[Function]}
              type="radio"
              value="none"
            />
            <FormattedMessage
              id="channel_notifications.never"
              values={Object {}}
            />
          </label>
        </div>
      </div>,
    ]
  }
  saving={false}
  section=""
  server_error=""
  submit={[Function]}
  title={
    <FormattedMessage
      defaultMessage="Send desktop notifications"
      id="channel_notifications.sendDesktop"
      values={Object {}}
    />
  }
  updateSection={[Function]}
/>
`;
